chore(EV14T01): add endpoint explanation to swagger page
